base/flux-system/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "100"
  name: flux
  namespace: flux-system
spec:
  rules:
  - host: flux.uberwald.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: notification-controller
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flux.uberwald.thaum.xyz
    secretName: flux-tls
